--- a/client/src/pages/home/style/Home.scss
+++ b/client/src/pages/home/style/Home.scss
@@ -39,12 +39,27 @@
     display: flex;
     flex-direction: column;
     gap : 1rem;
-    background-color: #FFEEDB;
+    // background-color: #FFEEDB;
     padding: 0rem 6%;
 }
 
 .home_animation_box2{
-    background-color: #FFEEDB;
+    // background-color: #FFEEDB;
     padding: 0rem 6%;
     border: 2px solid red;
+}
+
+.Architecture {
+    // border: 2px solid red;
+    width: 100%;
+    height: 142rem;
+    // padding-left: 2rem;
+    // padding-right: 2rem;
+    // border: 2px solid red;
+    // min-height: 100vh;
+    position: relative;
+    background-color: #FFEEDB;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
 }
