--- a/client/src/pages/home/style/HomeService.scss
+++ b/client/src/pages/home/style/HomeService.scss
@@ -1,44 +1,57 @@
 .service_container_homes {
   background-color: #FFEEDB;
   padding: 4rem 6rem;
+
   .services_heading {
     display: flex;
     gap: 0.4rem;
+
+    justify-content: center;
+    align-items: center;
+
     .line {
-        width: 2.5rem;
-        border-bottom: 4px solid #000;
+      width: 2.5rem;
+      border-bottom: 4px solid #000;
     }
-    
-    .text{
-        font-size: 2rem;
-        font-family: 'Cormorant Garamond', serif;
+
+    .text {
+      font-size: 2rem;
+      font-size: 4rem;
+      font-family: "Crimson Text", serif;
+
     }
   }
+
   .services_cards {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 2.5rem;
     gap: 2rem;
+
     .service_card {
       flex: 1 1 30%;
       display: flex;
       flex-direction: column;
       gap: 0.75rem;
+
       .service_top {
         display: flex;
         align-items: center;
         gap: 1rem;
+
         .service_icon {
           width: 2.5rem;
           height: auto;
         }
+
         h3 {
           font-size: 1.25rem;
           font-family: 'Cormorant Garamond', serif;
           margin: 0;
         }
       }
+
       p {
         margin-left: 3.5rem; // align paragraph under heading
         font-size: 1rem;
@@ -48,11 +61,14 @@
     }
   }
 }
+
 @media (max-width: 768px) {
   .service_container_homes {
     padding: 2rem 1rem;
+
     .services_cards {
       flex-direction: column;
+
       .service_card {
         p {
           margin-left: 3rem;
