--- a/client/src/pages/service/style/Caraousel.scss
+++ b/client/src/pages/service/style/Caraousel.scss
@@ -51,7 +51,7 @@ $cream : #FFEEDB;
     display: flex;
     justify-content: center;
     // align-items: center;
-    background: linear-gradient(180deg, transparent 50%, $cream 50%);
+    background: linear-gradient(180deg, $cream 50%, $cream 50%);
     // background: linear-gradient(180deg, $dark_cover_color 50%, $cream 50%);
     padding: 3rem 0rem;
     position: relative;
