--- a/client/src/pages/service/style/Service.scss
+++ b/client/src/pages/service/style/Service.scss
@@ -48,7 +48,8 @@
     
     .display_section {
         @include flexcenter;
-        border: 2px solid red;
+        // border: 2px solid red;
+        cursor: pointer;
         background: white;
         background: rgb(55, 55, 55);
 
@@ -78,6 +79,23 @@
             color: black;
             color: white;
             // color: white;
+        }
+
+        &:hover{
+            transition: 0.6s;
+            background: rgb(199, 96, 96);
+            color: black;
+            background: rgb(220, 218, 218);
+            background: rgb(221, 193, 66);
+            // box-shadow: 0px 0px 10px #3A3042;
+            box-shadow: none;
+
+            h2{
+                color: black;
+            }
+            p{
+                color: black;
+            }
         }
     }
 }
